--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "jest-expo": "30.0.0"
