--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
-    "tcomb-form-native": "^0.6.20"
+    "tcomb-form-native": "^0.6.20",
+    "lodash": "latest"
   },
   "devDependencies": {
     "jest-expo": "30.0.0"
