--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^30.0.1",
+    "lodash": "latest",
     "prop-types": "latest",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-db-models": "^0.1.3",
     "react-native-elements": "^0.19.1",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
-    "tcomb-form-native": "^0.6.20",
-    "lodash": "latest"
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "jest-expo": "30.0.0"
