--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-db-models": "^0.1.3",
     "react-native-elements": "^0.19.1",
+    "react-native-router-flux": "^4.0.5",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
