--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@expo/samples": "2.1.1",
     "expo": "^30.0.1",
     "lodash": "latest",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "prop-types": "latest",
     "react": "16.3.1",
+    "react-moment": "^0.8.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-db-models": "^0.1.3",
     "react-native-elements": "^0.19.1",
