--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^30.0.1",
+    "formik": "^1.3.1",
     "lodash": "latest",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
@@ -29,7 +30,8 @@
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
-    "tcomb-form-native": "^0.6.20"
+    "tcomb-form-native": "^0.6.20",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "jest-expo": "30.0.0"
