--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "latest",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "native-base": "^2.8.1",
     "prop-types": "latest",
     "react": "16.3.1",
     "react-moment": "^0.8.1",
