--- a/package.json
+++ b/package.json
@@ -14,11 +14,27 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "axios": "^0.18.0",
     "expo": "^30.0.1",
+    "formik": "^1.3.1",
+    "lodash": "latest",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
+    "native-base": "^2.8.1",
+    "prop-types": "latest",
     "react": "16.3.1",
+    "react-moment": "^0.8.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-db-models": "^0.1.3",
+    "react-native-elements": "^0.19.1",
+    "react-native-router-flux": "^4.0.5",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.16.0",
-    "react-redux": "^5.0.7"
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "tcomb-form-native": "^0.6.20",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "jest-expo": "30.0.0"
